--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Release All Platforms
 
 on:
   workflow_dispatch:
@@ -9,6 +9,7 @@ on:
 jobs:
   releases-matrix:
       name: Release Go Binary
+      permissions: write-all
       runs-on: ubuntu-latest
       strategy:
         matrix:
