--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,3 +28,5 @@ jobs:
           goarch: ${{ matrix.goarch }}
           goversion: "https://dl.google.com/go/go1.22.1.linux-amd64.tar.gz"
           binary_name: "rawd"
+          sha256sum: TRUE
+          md5sum: FALSE
